# base-backend

./: .env  .env.example  .eslintrc.js  .prettierrc  Cargo.toml  README.md  diesel.toml  docker-compose.yml  package.json  tsconfig.json
migrations/2024-10-22-072812_create_users/: up.sql
src/: app.controller.ts  app.module.ts  main.rs  main.ts  schema.rs  swagger.ts
src/configs/: config.module.ts  data-source.config.ts  database.module.ts  database.rs  index.ts  mod.rs
src/constants/: controller.constant.ts  entity.constant.ts  env.constant.ts  env.rs  guard.constant.ts  swagger.constant.ts
src/entities/: test.entity.ts  user.entity.ts
src/models/: user.rs
src/modules/: check_health.rs  index.ts  mod.rs
src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
src/modules/test/: test.controller.ts  test.module.ts  test.repository.ts  test.service.ts
src/modules/user/: user.controller.ts  user.module.ts  user.repository.ts  user.service.ts
src/modules/v1/: mod.rs
src/modules/web3/: web3.module.ts  web3.service.ts
src/shared/decorators/: method.decorator.ts  permission.decorator.ts  user-payload.decorator.ts
src/shared/dtos/: response.dto.ts
src/shared/exception-filters/: all.exception-filter.ts
src/shared/guards/: jwt.guard.ts  role.guard.ts
src/shared/interceptors/: interceptor.module.ts  transform.interceptor.ts
src/shared/interfaces/: jwt.interface.ts  method.interface.ts  test.interface.ts  user.interface.ts
src/shared/middlewares/: logger.middleware.ts
src/types/: errors.rs
(+10 files in other folders)
