[package]
name = "base-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.132"
